...
                          Expanded(child: _featureMenu()),
                          Expanded(child: _languageMenu(state)),
                        ],
                      ),
                    ),
                    Positioned(
                      key: const Key("sideMenuArrow"),
                      left: 206.w,
                      top: 105.h,
                      child: Container(
                        width: 28.w,
                        height: 75.h,
                        alignment: Alignment.center,
...
          fit: BoxFit.fill,
          height: 2.h,
          width: 160.w,
        ),
        Expanded(
          child: FeatureItem(
            key: const Key("deckBuilderFeatureItem"),
            type: FeatureItemType.deckBuilder,
            isSelected: widget.inDeckBuilderMode,
            onTap: () => widget.inDeckBuilderMode ? null : _navigate(context, const DeckSelectionRoute()),
          ),
        ),
        Image.asset(
...
        Container(
          padding: EdgeInsets.symmetric(horizontal: 10.w, vertical: 8.75.h),
          child: Row(
            children: [
              Expanded(
                child: LanguageButton(
                  key: const Key("englishLanguageButton"),
                  isSelected: state.cardFilterParams.locale == LanguageButtonType.english.value,
                  type: LanguageButtonType.english,
                  onTap: () => _changeLocale(state, const Locale("en", "US")),
                ),
              ),
              Expanded(
                child: LanguageButton(
                  key: const Key("germanLanguageButton"),
                  isSelected: state.cardFilterParams.locale == LanguageButtonType.german.value,
                  type: LanguageButtonType.german,
                  onTap: () => _changeLocale(state, const Locale("de", "DE")),
                ),
              ),
              Expanded(
                child: LanguageButton(
                  key: const Key("japaneseLanguageButton"),
                  isSelected: state.cardFilterParams.locale == LanguageButtonType.japanese.value,
                  type: LanguageButtonType.japanese,
                  onTap: () => _changeLocale(state, const Locale("ja", "JP")),
                ),
              ),
            ],
...
