...
                    mainAxisSize: MainAxisSize.min,
                    children: [
                      _classFilter(deckClass, ref, state, isDeckBuilderMode),
                      Container(
                        padding: EdgeInsets.only(top: 4.375.h, bottom: 2.625.h),
                        child: HSDropdown(
                          key: const Key("setFilterDropdown"),
                          height: 70.h,
                          width: 95.w,
                          dropdownWidth: 250.w,
                          selectedValue: state.cardFilterParams.set,
                          dropdownType: _setDropDownType(deckType),
                          dropdownValues: _setDropDownValues(deckType),
...
                        ),
                      ),
                      Expanded(
                        child: Container(
                          padding: EdgeInsets.only(top: 4.375.h, bottom: 2.625.h),
                          child: HSTextField(
                            key: const Key("searchFilter"),
                            hint: LocaleKeys.search.tr(),
                            suffix: TextFieldSuffix.search,
                            onSubmitted: (_) {},
                            onChange: (text) => debouncer.run(() {
                              ref
                                  .read(notifierProvider.notifier)
...
                          ),
                        ),
                      ),
                      Container(
                        padding: EdgeInsets.only(top: 4.375.h, bottom: 2.625.h),
                        child: HSBarToggleButton(
                          key: const Key("appBarToggle"),
                          width: 70.w,
                          isToggled: isExtended,
                          activeFilters: extraFiltersActive(state.cardFilterParams),
                          onTap: () {
                            _toggleBarExtension();
                          },
...
            onToggleNeutralFilter: () => ref.read(notifierProvider.notifier).handleToggleNeutralCards(deckClass),
            deckClass: deckClass,
            height: 105.h,
            width: 110.w,
          )
        : Container(
            key: const Key("classFilterDropdown"),
            padding: EdgeInsets.only(top: 4.375.h, bottom: 2.625.h),
            child: HSDropdown(
              height: 70.h,
              width: 150.w,
              dropdownWidth: 175.w,
              selectedValue: state.cardFilterParams.heroClass.toString(),
...
