...
  const CardDetailsScreen(this.card, {super.key});

  final CardDTO card;

  Widget _buildCard() {
    return Foil(
      key: const Key("detailsCard"),
      opacity: 0.2,
      child: Center(
        child: Image.network(
          card.image,
          fit: BoxFit.fill,
          errorBuilder: (context, object, stackTrace) => const CardLoading(),
...
        child: Stack(
          children: [
            Positioned(
              top: 43.75.h,
              right: 60.w,
              child: GestureDetector(
                key: const Key("closeDetails"),
                onTap: () => Navigator.pop(context),
                child: Image.asset(
                  assetPath(kSubfolderMisc, "close"),
                  fit: BoxFit.fill,
                  width: 40.w,
                ),
...
